samples/_failures_safe/1761084922_9b4d94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49477578.c: In function ‘main’:
./samples/SAFE/__tmp_49477578.c:151:5: error: expected expression at end of input
  151 |     if (
      |     ^~
./samples/SAFE/__tmp_49477578.c:151:5: error: expected declaration or statement at end of input
